elasticsearch 简单查询流程完成

--- a/src/main/resources/elasticsearch.properties
+++ b/src/main/resources/elasticsearch.properties
@@ -6,16 +6,14 @@ cluster.ip.address=127.0.0.1:11300
 #获取集群中其他ES节点的ip,添加到本地的客户端列表
 client.transport.sniff=true
 
-##################elasticsearch索引配置##################
-#搜索索引名
-search.index.name=liceyo
-#搜索索引类型
-search.index.type=liceyo
-
 ################elasticsearch搜索类型配置################
 #类型对应的字段
-search.type.field=dataType
-#资讯类型值
-search.type.news.value=news
-#研究类型值
-search.type.research.value=research
+search.type.field=data_type
+#全文搜索默认字段
+search.default.field=title,content
+##新闻
+#新闻列表搜索字段
+news.list.includes=title,content,news_pub_time,news_summary,news_source_name
+##研究
+#资讯列表搜索字段
+research.list.includes=title,content,scr_pub_time,scr_magazine,scr_background
