--- a/src/main/resources/elasticsearch.properties
+++ b/src/main/resources/elasticsearch.properties
@@ -10,10 +10,10 @@ client.transport.sniff=true
 #类型对应的字段
 search.type.field=data_type
 #全文搜索默认字段
-search.default.field=title,content
+search.default.field=data_title,data_content
 ##新闻
 #新闻列表搜索字段
-news.list.includes=title,content,news_pub_time,news_summary,news_source_name
+news.list.includes=data_id,data_type,data_title,data_content,news_pub_time,news_summary,news_source_name
 ##研究
 #资讯列表搜索字段
-research.list.includes=title,content,scr_pub_time,scr_magazine,scr_background
+research.list.includes=data_id,data_type,data_title,data_content,scr_pub_time,scr_magazine,scr_background
