elasticsearch 简单自动补全

--- a/src/main/resources/elasticsearch.properties
+++ b/src/main/resources/elasticsearch.properties
@@ -6,6 +6,16 @@ cluster.ip.address=127.0.0.1:11300
 #获取集群中其他ES节点的ip,添加到本地的客户端列表
 client.transport.sniff=true
 
+##################elasticsearch索引配置##################
+#主要搜索索引名
+search.index.name=liceyo
+#主要搜索的索引类型
+search.index.type=liceyo
+#自动提示的索引名
+auto.completion.index.name=liceyo_auto_completion
+#自动提示的索引类型
+auto.completion.index.type=auto_completion
+
 ################elasticsearch搜索类型配置################
 #类型对应的字段
 search.type.field=data_type
