--- a/src/main/resources/elasticsearch.properties
+++ b/src/main/resources/elasticsearch.properties
@@ -20,10 +20,10 @@ auto.completion.index.type=auto_completion
 #类型对应的字段
 search.type.field=data_type
 #全文搜索默认字段
-search.default.field=data_title,data_content
+search.default.field=data_title^2,data_content
 ##新闻
-#新闻列表搜索字段
+#新闻列表搜索包含字段
 news.list.includes=data_id,data_type,data_title,data_content,news_pub_time,news_summary,news_source_name
 ##研究
-#资讯列表搜索字段
+#资讯列表搜索包含字段
 research.list.includes=data_id,data_type,data_title,data_content,scr_pub_time,scr_magazine,scr_background
