--- a/src/main/resources/elasticsearch.properties
+++ b/src/main/resources/elasticsearch.properties
@@ -20,7 +20,7 @@ auto.completion.index.type=auto_completion
 #类型对应的字段
 search.type.field=data_type
 #全文搜索默认字段
-search.default.field=data_title^2,data_content
+search.default.field=data_title,data_content
 ##新闻
 #新闻列表搜索包含字段
 news.list.includes=data_id,data_type,data_title,data_content,news_pub_time,news_summary,news_source_name
